opam-version: "2.0"
version:"0.4.7"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Oliver Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab"
bug-reports:  "https://github.com/atolab/apero-net/issues/"
dev-repo:     "git+https://github.com/atolab/apero-net.git"

license: "Apache-2.0"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]


depends: [
  "ocaml" {>= "4.03.0"}
  "dune"
  "cmdliner"
  "fmt" 
  "logs" 
  "lwt" {< "5.0.0"}
  "ppx_deriving" 
  "uuidm" 
  "yojson"
  "lwt_ppx"
  "apero-core" {>= "0.4.5"}
  "websocket" {>= "2.12"}
  "websocket-lwt" {>= "2.12"}
]

synopsis : "OCaml Networking Library"
description: """
apero-net is collection of OCaml libraries that simplify the task of writing
network protocol and network services."""
